# s3splus

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  config.example.json  main.py  plusutils.py  pyproject.toml  requirements.txt  s3s.py  s3sproxy.py  s3swrapper.py  threshold.sh
.github/workflows/: pages.yml
masks/ja/: battle_intro_rule_area.json  battle_intro_rule_asari.json  battle_intro_rule_nawabari.json  battle_intro_rule_tricolor_guard.json  battle_intro_title.json  battle_intro_title_tricolor.json  battle_lobby_matched.json  battle_result_bankara_challenge_finish_abutton.json  battle_result_bankara_challenge_finish_title.json  battle_result_medal_header.json  battle_result_scoreboard_no_game.json  battle_result_win.json  error_no_game_by_disconnect.json  error_schedule_refresh.json  error_server_maintenance_soon.json  replay_ingame_500.json  replay_ingame_plusminus.json  replay_result_quit.json  replay_result_retry.json  salmon_ingame_wave_header.json  salmon_intro_stage_donburako.json  salmon_lobby_matched.json  salmon_result_point_desc_header.json  shared_lobby_matching_prefix.json  shared_result_please_wait.json
masks/und/: battle_ingame_music_header.json  battle_ingame_time_colon.json  battle_ingame_time_colon_tricolor.json  battle_map_icon.json  battle_result_scoreboard_abutton.json  battle_result_scoreboard_winp.json  battle_result_scoreboard_winp_tricolor.json  (+2 more)
plus/: config.py  constants.py  detector.py  s3s.py
pytools/: compress_mask_images.py
webtools/: .gitignore  index.html  package.json  rollup.config.mjs  tsconfig.json
(+8 files in other folders)
