[project]
name = "s3splus"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "opencv-python>=4.9.0.80",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "msgpack-python>=0.5.6",
    "packaging>=24.0",
    "pillow>=10.3.0",
    "pytesseract>=0.3.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
